# ChangeLog for net-mail/f-prot
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/f-prot/Attic/ChangeLog,v 1.12 2003/04/19 23:21:44 prez Exp $

*f-prot-3.12c (08 Dec 2002)

  19 Apr 2003; Preston A. Elder <prez@gentoo.org> digest-f-prot-3.12c :
  Made ebuild satisfy virtual/virus

  10 Jan 2003; Nick Hadaway <raker@gentoo.org> digest-f-prot-3.12c :
  Updated digest AGAIN.

  14 Dec 2002; Nick Hadaway <raker@gentoo.org> digest-f-prot-3.12c :
  Updated digest as upstream updated the file.

  09 Dec 2002; Nick Hadaway <raker@gentoo.org> f-prot-3.12c.ebuild :
  Marked stable.

  08 Dec 2002; Jack Morgan <jmorgan@gentoo.org> f-prot-3.12a|b|c.ebuild : 
  Removed ~sparc64/sparc64 keyword

  08 Dec 2002; Nick Hadaway <raker@gentoo.org> f-prot-3.12c.ebuild,
  files/digest-f-prot-3.12c, files/f-prot-3.12c.diff :
  Version bump.

*f-prot-3.12b (19 Nov 2002)

  21 Nov 2002; Nick Hadaway <raker@gentoo.org> f-prot-3.12b.ebuild :
  Marked stable.

  19 Nov 2002; Nick Hadaway <raker@gentoo.org> f-prot-3.12b.ebuild,
  files/digest-f-prot-3.12b, files/f-prot-3.12b.diff :
  Version bump

*f-prot-3.12a (10 Jun 2002)

  01 Nov 2002; Nick Hadaway <raker@gentoo.org> files/insall-path.diff :
  Added fix for f-prot.sh.  See bug #7326

  17 Jul 2002; Nick Hadaway <raker@gentoo.org> files/install-path.diff :
  Patched check-updates.sh.  Closes bug #5009.

  10 Jun 2002; Grant Goodyear <g2boojum@gentoo.org> fprot-3.12a.ebuild
  ChangeLog files/digest-f-prot-3.12a :
  Initial package. Closes bug #3408