@@ -1,5 +1,7 @@
+MD5 bfac88d5a9224c20a0fde21296c1b1df ChangeLog 1738
 MD5 c76c7bcf59bb3c0ae601eeb54cdb5cb6 f-prot-3.12c.ebuild 1058
-MD5 2a6fabaf113953b5d8a316bba6144ffa ChangeLog 1565
+MD5 3d1212e1b54ae658a6a8c37e28ede5e2 f-prot-4.1.1.ebuild 1011
 MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
 MD5 5eefa9bcdb690942103a910177d2ec0f files/digest-f-prot-3.12c 70
 MD5 a895b0a5b6825116990f9b562cc8161a files/f-prot-3.12c.diff 677
+MD5 13b94a2758975215597ae91c1210683f files/digest-f-prot-4.1.1 70
